syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

service CalulatorService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Sum(stream SumRequest) returns (SumResponse);
}

message AddRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message AddResponse {
    int32 result = 1;
}

message SumRequest {
    int32 num = 1;
}

message SumResponse {
    int32 result = 1;
}
